# daspack

./: .gitignore  Cargo.toml  README.md  pyproject.toml
benchmark/: README.md  bench_helper.py  compression_methods.py  run_example.py
daspack/: __init__.py  compute.pyi
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: blocks.rs  entropy.rs  hdf5_plugin.rs  lib.rs  prediction.rs  pybindings.rs  wavelets.rs
rust/src/entropy/: exp_golomb.rs
rust/src/legacy/: blocks_old.rs
src/: blocks.rs  codec.rs  entropy.rs  hdf5_plugin.rs  lib.rs  prediction.rs  pybindings.rs  wavelets.rs
src/codec/: blocks.rs  dascoder.rs  lossless.rs  lossy.rs  params.rs
src/core/: entropy.rs
src/legacy/: entropy_old.rs
tests/: reconstruction.rs
