[package]
name = "compute"  # must match the name of your Rust extension module
version = "0.1.0"
edition = "2024"

[lib]
name = "compute"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python", "hdf5"]
python = ["pyo3", "numpy"]
hdf5 = ["hdf5-sys"]


[dependencies]
pyo3 = { version = "0.23.5", features = ["extension-module"], optional = true}
ndarray = {version = "0.16.1", features = ["rayon"]}
numpy = {version = "0.23", optional = true}
constriction = "0.4.1"
byteorder = "1.5.0"
probability = "0.20.3"
rayon = "1.10.0"
hdf5-sys = {version = "0.8.1", optional = true}
libc = "0.2" 
anyhow = "1.0.98"
thiserror = "2.0.12"
bytemuck = "1.23.0"
rand = "0.9.1"
pprof = { version = "0.13", features = ["flamegraph"] }
rand_distr = "0.5.1"
once_cell = "1.21.3"
libm = "0.2.15"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
incremental = false